--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceShooterJS</title>
+    <link rel="preload" as="font" href="assets/PressStart2P.ttf" type="font/ttf" />
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="phaser.js"></script>
 </head>
 <body>
